--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "author": "Ben Williams",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-stage-0": "^6.1.2",
+    "babel-runtime": "^5.8.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -13,6 +20,15 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
-    "jshint": "^2.9.1"
+    "jshint": "^2.9.1",
+    "vue-loader": "^9.5.0",
+    "webpack": "^1.12.2",
+    "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "css-loader": "^0.25.0",
+    "firebase": "^3.5.2",
+    "vue": "^2.0.3",
+    "vuefire": "^1.3.0"
   }
 }
